--- a/Laba8/Laba8.csproj
+++ b/Laba8/Laba8.csproj
@@ -33,6 +33,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="abc">
+      <HintPath>..\..\..\Laba7\OOP Laba7\OOP Laba7\bin\Debug\abc.dll</HintPath>
+    </Reference>
+    <Reference Include="def">
+      <HintPath>..\..\..\Laba7\OOP Laba7\OOP Laba7\bin\Debug\def.dll</HintPath>
+    </Reference>
+    <Reference Include="standart">
+      <HintPath>..\..\..\Laba7\standart\standart\bin\Debug\standart.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,14 +55,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Command.cs" />
+    <Compile Include="Creator.cs" />
+    <Compile Include="DDLWorker.cs" />
+    <Compile Include="DrawableObject.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Info.cs" />
+    <Compile Include="Instrument.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Storage.cs" />
+    <Compile Include="Tree.cs" />
+    <EmbeddedResource Include="Form1.resx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
